Cache Control headers

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -146,7 +146,7 @@
 
       # HEADERS
       more_set_headers          "Server: DECALS-X";
-      add_header                Cache-Control "no-transform,public,max-age=300,s-maxage=900";
+      add_header                Cache-Control "no-transform,public,max-age=36720000,s-maxage=86400";
       etag                      on;
       expires                   425d;
       
