--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -96,7 +96,7 @@ server {
       # HEADERS
       more_clear_headers        'Server';
       more_set_headers          "X-Server: Azure-CDN";
-      add_header                Cache-Control "no-transform,public,max-age=300,s-maxage=900";
+      add_header                Cache-Control "no-transform,public,max-age=36720000,s-maxage=86400";
       etag                      on;
       expires                   425d;
 
