Keep Alive Timout

--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -41,7 +41,7 @@ server {
   #server_name *.cloudapp.net;
   root   /usr/share/nginx/sites/wwwroot/;
   index  index.php index.html index.htm;
-  keepalive_timeout     5;
+  keepalive_timeout     5s;
   allow                 all;
   server_tokens         off; 
   more_clear_headers    'Cache-Control';
@@ -89,7 +89,7 @@ server {
   # This means all cdn urls start with /de/x/
   location /cdn/de/x/ {
       # BASIC SETTINGS
-      keepalive_timeout         2;
+      keepalive_timeout         2s;
       allow                     all;
       server_tokens             off; 
 
