--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -83,7 +83,7 @@
     listen                80;
     server_name           *.decalicious.com;
     root                  /usr/share/nginx/sites/decalicious-down/;
-    keepalive_timeout     5;
+    keepalive_timeout     5s;
     allow                 all;
     server_tokens         off; 
     more_clear_headers    'Cache-Control';
@@ -146,7 +146,7 @@
 
       # HEADERS
       more_set_headers          "Server: DECALS-X";
-      add_header                Cache-Control "no-transform,public,max-age=36720000,s-maxage=86400";
+      add_header                Cache-Control "no-transform,public,max-age=36720000";
       etag                      on;
       expires                   425d;
       
