multiple location static

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -142,7 +142,9 @@
 
 
     # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
-    location /x/ {
+    #location /x/ {
+    location ~ /(/x/|/app/|/cheese/) {
+
 
       # HEADERS
       more_set_headers          "Server: DECALS-X";
