--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -143,7 +143,7 @@
 
     # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
     #location /x/ {
-    location ~ /(/x/|/app/|/cheese/) {
+    location ~ /(x/|app/|favicon.ico/) {
 
 
       # HEADERS
