--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -228,7 +228,7 @@
       proxy_set_header          X-Real-IP         $remote_addr;
       proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header          X-Forwarded-Proto $scheme;
-      proxy_pass                http://decalicious.s3.amazonaws.com/;
+      proxy_pass                http://decalicious.s3.amazonaws.com;
       proxy_temp_path           /usr/share/nginx/temp;
       #proxy_connect_timeout    5;
       #proxy_read_timeout       240;
