--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -117,6 +117,7 @@ server {
       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
  
       # PROXY SETTINGS
+      proxy_http_version        1.1;
       proxy_redirect            off;
       proxy_set_header          Host              "www.decalicious.com";
       proxy_set_header          X-Real-IP         $remote_addr;
