--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -170,6 +170,7 @@
  
 
       # PROXY SETTINGS
+      proxy_http_version        1.1;
       proxy_redirect            off;
       proxy_set_header          Host              $http_host;
       proxy_set_header          X-Real-IP         $remote_addr;
@@ -223,8 +224,9 @@
  
 
       # PROXY SETTINGS
+      proxy_http_version        1.1;
       proxy_redirect            off;
-      proxy_set_header          Host              $http_host;
+      proxy_set_header          Host              "http://decalicious.s3.amazonaws.com";
       proxy_set_header          X-Real-IP         $remote_addr;
       proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
       proxy_set_header          X-Forwarded-Proto $scheme;
