--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -195,10 +195,14 @@
       break;
     }
 
-    # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
-    #location /x/ {
-    location ~ /(s3/|zzzapp/|zzzfavicon.ico/) {
 
+
+
+    # FILES LOADED FROM S3
+    #location /s3/ {
+    location ~* ^/s3/(.*) {
+      set $s3_bucket        'decalicious.s3.amazonaws.com';
+      set $url_full         '$1';
 
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
@@ -226,14 +230,19 @@
       # PROXY SETTINGS
       proxy_http_version        1.1;
       proxy_redirect            off;
-      proxy_set_header          Host              "http://decalicious.s3.amazonaws.com";
-      proxy_set_header          X-Real-IP         $remote_addr;
-      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header          X-Forwarded-Proto $scheme;
-      proxy_pass                http://decalicious.s3.amazonaws.com;
+      proxy_set_header          Host $s3_bucket;
+      proxy_set_header          Authorization '';
+      proxy_hide_header         x-amz-id-2;
+      proxy_hide_header         x-amz-request-id;
+      proxy_hide_header         Set-Cookie;
+      proxy_ignore_headers      "Set-Cookie";
+      proxy_buffering           off;
+      proxy_intercept_errors    on;
+      resolver                  8.8.4.4 8.8.8.8 valid=300s;
+      resolver_timeout          10s;
+      proxy_pass                http://$s3_bucket/$url_full;
       proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+
 
       # PROXY CACHING
       proxy_cache               STATIC;
