--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -201,6 +201,15 @@
     # FILES LOADED FROM S3
     #location /s3/ {
     location ~* ^/s3/(.*) {
+
+    userid         on;
+    userid_name    uid;
+    userid_domain  decalicious.com;
+    userid_path    /;
+    userid_expires 365d;
+    userid_p3p     'policyref="/w3c/p3p.xml", CP="CUR ADM OUR NOR STA NID"';
+
+
       set $s3_bucket        'decalicious.s3.amazonaws.com';
       set $url_full         '$1';
 
