--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -196,22 +196,72 @@
     }
 
 
+    # BLOGGER
+    #location /blog/ {
+    location ~ /blog {
+
+
+      # HEADERS
+      more_set_headers          "Server: DECALS-X";
+      add_header                Cache-Control "no-transform,public,max-age=36720000";
+      etag                      on;
+      expires                   425d;
+      
+      # Cache File Information
+      open_file_cache           max=1000 inactive=500s;
+      open_file_cache_valid     600s;
+      open_file_cache_errors    on;
+
+      # Gzip
+      gzip                      on;
+      gzip_vary                 on;
+      gzip_http_version         1.0;
+      gzip_disable              "MSIE [1-6].(?!.*SV1)";
+      gzip_min_length           200;
+      gzip_buffers              64 8k;
+      gzip_comp_level           3;
+      gzip_proxied              any;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+ 
+
+      # PROXY SETTINGS
+      proxy_http_version        1.1;
+      proxy_redirect            off;
+      proxy_set_header          Host              "blog.decalicious.com";
+      proxy_set_header          X-Real-IP         $remote_addr;
+      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_pass                http://blog.decalicious.com;
+      proxy_temp_path           /usr/share/nginx/temp;
+      #proxy_connect_timeout    5;
+      #proxy_read_timeout       240;
+
+      # PROXY CACHING
+      proxy_cache               STATIC;
+      proxy_cache_valid         200 302 1d;
+      proxy_cache_valid         404     1m;
+      proxy_cache_use_stale     error timeout invalid_header updating
+      http_500 http_502 http_503 http_504;
+
+      #HTTP ERRORS LOCALLY 
+      proxy_intercept_errors on; 
+      error_page 500 502 503 504 =503 /maintenance.html;
+      #error_page 404 =404 /404.html;      
+      break;
+    }
+
+
 
 
     # FILES LOADED FROM S3
     #location /s3/ {
     location ~* ^/s3/(.*) {
 
-    userid         on;
-    userid_name    uid;
-    userid_domain  decalicious.com;
-    userid_path    /;
-    userid_expires 365d;
-    userid_p3p     'policyref="/w3c/p3p.xml", CP="CUR ADM OUR NOR STA NID"';
 
 
-      set $s3_bucket        'decalicious.s3.amazonaws.com';
-      set $url_full         '$1';
+
+      set $s3_bucket           'decalicious.s3.amazonaws.com';
+      set $url_full            '$1';
 
       # HEADERS
       add_header                Content-Type application/pdf;
