--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -198,11 +198,15 @@
 
     # BLOGGER
     #location /blog/ {
-    location ~ /blog {
+    location ~* ^/blog/(.*) {
 
+
+      set $blog_url            'blog.decalicious.com';
+      set $url_full            '$1';
 
       # HEADERS
-      more_set_headers          "Server: DECALS-X";
+      add_header                Content-Type application/pdf;
+      more_set_headers          "Server: DECALS-S3";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
       etag                      on;
       expires                   425d;
@@ -227,14 +231,18 @@
       # PROXY SETTINGS
       proxy_http_version        1.1;
       proxy_redirect            off;
-      proxy_set_header          Host              "blog.decalicious.com";
-      proxy_set_header          X-Real-IP         $remote_addr;
-      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-      proxy_set_header          X-Forwarded-Proto $scheme;
-      proxy_pass                http://blog.decalicious.com;
+      proxy_set_header          Host $blog_url;
+      proxy_set_header          Authorization '';
+      proxy_hide_header         x-amz-id-2;
+      proxy_hide_header         x-amz-request-id;
+      proxy_hide_header         Set-Cookie;
+      proxy_ignore_headers      "Set-Cookie";
+      proxy_buffering           off;
+      resolver                  8.8.4.4 8.8.8.8 valid=300s;
+      resolver_timeout          10s;
+      proxy_pass                http://$blog_url/$url_full;
       proxy_temp_path           /usr/share/nginx/temp;
-      #proxy_connect_timeout    5;
-      #proxy_read_timeout       240;
+
 
       # PROXY CACHING
       proxy_cache               STATIC;
