--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -204,6 +204,8 @@
       set $blog_url            'blog.decalicious.com';
       set $url_full            '$1';
 
+      subs_filter               blog.decalicious.com/ www.decalicious.com/blog;
+
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
