--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -230,6 +230,7 @@
  
 
       # PROXY SETTINGS
+      proxy_set_header          Accept-Encoding "";
       proxy_http_version        1.1;
       proxy_redirect            off;
       proxy_set_header          Host $blog_url;
