missing slash on outbound rule

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -204,7 +204,7 @@
       set $blog_url            'blog.decalicious.com';
       set $url_full            '$1';
 
-      subs_filter               blog.decalicious.com/ www.decalicious.com/blog;
+      subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
 
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
