remove slash from blog

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -198,7 +198,7 @@
 
     # BLOGGER
     #location /blog/ {
-    location ~* ^/blog/(.*) {
+    location ~* ^/blog(.*) {
 
 
       set $blog_url            'blog.decalicious.com';
