--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -200,6 +200,11 @@
     #location /blog/ {
     location ~* ^/blog(.*) {
 
+      if ($request_uri !~ "^/blog")
+      {
+      rewrite ^([^.]*[^/])$ $1/ permanent;
+      }
+
 
       set $blog_url            'blog.decalicious.com';
       set $url_full            '$1';
