--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -200,9 +200,9 @@
     #location /blog/ {
     location ~* ^/blog(.*) {
 
-      if ($request_uri !~ "^/blog")
+      if ($request_uri ~* "^/blog")
       {
-      rewrite ^([^.]*[^/])$ $1/ permanent;
+      rewrite ^(.*[^/])$ $1/ permanent;
       }
 
 
