Canonical Domain - Blog

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -196,14 +196,21 @@
     }
 
 
-    # BLOGGER
+    # BLOGGER to DECALICIOUS.com/ Blog
     #location /blog/ {
     location ~* ^/blog(.*) {
 
+      # Add Trailing Slash to Blog
       if ($request_uri ~* "^/blog")
       {
       rewrite ^(.*[^/])$ $1/ permanent;
       }
+
+      # Make sure blog is only available under www domain
+      if ( $host != 'www.decalicious.com' ) {
+       rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+      }
+
 
 
       set $blog_url            'blog.decalicious.com';
