--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -203,23 +203,24 @@
       # Add Trailing Slash to Blog
       if ($request_uri ~* "^/blog")
       {
-      rewrite ^(.*[^/])$ $1/ permanent;
+        rewrite ^(.*[^/])$ $1/ permanent;
       }
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
-       rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+        rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
       }
 
+      # Rewrite outbound text to new url
+      subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
 
-
+      # Variables so we can redirect later
       set $blog_url            'blog.decalicious.com';
       set $url_full            '$1';
 
-      subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
 
       # HEADERS
-      more_set_headers          "Server: DECALS-S3";
+      more_set_headers          "Server: DECALS-BL";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
       etag                      on;
       expires                   425d;
