Custom Mime Types

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -281,6 +281,11 @@
     location ~* ^/s3/(.*) {
 
 
+      # Add Trailing Slash to Blog
+      if ($request_uri ~* "^/blog")
+      {
+        rewrite ^(.*[^/])$ $1/ permanent;
+      }
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
