Gzip Types Fonts

--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,7 +1,7 @@
 # CUSTOM NGINX CONFIGURATION - MATADOR
 
 # redone
-user         www-data;
+user                www-data;
 worker_processes    2;
 worker_priority    -5;
 timer_resolution   100ms;
@@ -46,8 +46,8 @@ http {
     gzip_buffers              64 8k;
     gzip_comp_level           3;
     gzip_proxied              any;
-    gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
+#   gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
 
     # PROXY CACHING
     proxy_cache_path  /usr/share/nginx/cache  levels=1:2  keys_zone=STATIC:10m inactive=24h  max_size=1g;
