--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,6 +1,7 @@
 # CUSTOM NGINX CONFIGURATION - MATADOR
+# CUSTOMIZED WITH GZIP and PERFORMANCE SETTINGS
 
-# redone
+
 user                www-data;
 worker_processes    2;
 worker_priority    -5;
