remove accept encoding

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -284,11 +284,11 @@
     location ~* ^/s3/(.*) {
 
 
-      # Add Trailing Slash to Blog
-      if ($request_uri ~* "^/blog")
-      {
-        rewrite ^(.*[^/])$ $1/ permanent;
-      }
+      # Rewrite File Extensions
+      #if ($request_uri ~* "^/blog")
+      #{
+      #  rewrite ^(.*[^/])$ $1/ permanent;
+      #}
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
@@ -318,6 +318,7 @@
  
 
       # PROXY SETTINGS
+      proxy_set_header          Accept-Encoding "";
       proxy_http_version        1.1;
       proxy_redirect            off;
       proxy_set_header          Host $s3_bucket;
