Hide amazon s3 headers

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -323,8 +323,12 @@
       proxy_redirect            off;
       proxy_set_header          Host $s3_bucket;
       proxy_set_header          Authorization '';
+
       proxy_hide_header         x-amz-id-2;
       proxy_hide_header         x-amz-request-id;
+      proxy_hide_header         x-amz-meta-tag;
+      proxy_hide_header         x-amz-meta-uuid;
+      
       proxy_hide_header         Set-Cookie;
       proxy_ignore_headers      "Set-Cookie";
       proxy_buffering           off;
