--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -224,9 +224,9 @@
 
       # HEADERS
       more_set_headers          "Server: DECALS-BL";
-      add_header                Cache-Control "no-transform,public,max-age=36720000";
+      add_header                Cache-Control "public, max-age=9";
       etag                      on;
-      expires                   425d;
+      expires                   60s;
       
       # Cache File Information
       open_file_cache           max=1000 inactive=500s;
@@ -314,7 +314,7 @@
       gzip_buffers              64 8k;
       gzip_comp_level           3;
       gzip_proxied              any;
-      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
  
 
       # PROXY SETTINGS
