--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -56,18 +56,14 @@
      # STICKY IP (SAME SERVER BASED ON IP)
      ip_hash;
 
-     # UPSTREAM IIS SERVERS
+     # UPSTREAM IIS SERVERS (Add More As Needed)
      server ww1.decalicious.com;
      #server ww2.decalicious.com;
      #server ww3.decalicious.com;
      #server ww4.decalicious.com;
      #server ww5.decalicious.com;
 
-
-
-     # HEALTH CHECK SETTINGS
-     # https://github.com/yaoweibin/nginx_upstream_check_module
-     # miliseconds
+     # HEALTH CHECK SETTINGS (Milisecond Intervals) > https://github.com/yaoweibin/nginx_upstream_check_module
      check interval=50000 rise=1 fall=2 timeout=2500 type=http;
      check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: decalicious.com\r\n\r\n";
      check_http_expect_alive http_2xx http_3xx;
