Testing SVG Header

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -275,11 +275,10 @@
     location ~* ^/s3/(.*) {
 
 
-      # Rewrite File Extensions
-      #if ($request_uri ~* "^/blog")
-      #{
-      #  rewrite ^(.*[^/])$ $1/ permanent;
-      #}
+      # Headers based on file extensions
+      if ($request_uri ~ .*svg.*) {  
+        more_set_headers        "x-content-type-stest: SVG";
+      }
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
