SVG Content Type

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -276,8 +276,10 @@
 
 
       # Headers based on file extensions
-      if ($request_uri ~ .*svg.*) {  
-        more_set_headers        "x-content-type-stest: SVG";
+      more_clear_headers        'Content-Type';
+      if ($request_uri ~* .*svg.*) {  
+        more_set_headers        "Content-Type:image/svg+xml";
+        more_set_headers        "X-Content-Type:OverRidden";
       }
 
 
