--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -276,8 +276,9 @@
 
 
       # Headers based on file extensions
-      more_clear_headers        'Content-Type';
-      if ($request_uri ~* .*svg.*) {  
+
+      location ~* ^.+.(svg|jpg|jpeg|gif|css|png|js|ico|txt|xml)${  
+        more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/svg+xml";
         more_set_headers        "X-Content-Type:OverRidden";
       }
