--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -277,11 +277,18 @@
 
       # Headers based on file extensions
 
-      location ~* ^.+.(svg|jpg|jpeg|gif|css|png|js|ico|txt|xml)${  
+      location ~* ^.+.(svg|gif)$  
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/svg+xml";
-        more_set_headers        "X-Content-Type:OverRidden";
-      }
+        more_set_headers        "X-Content-Type:OverRidden-SVG";
+      
+      location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  
+        more_clear_headers      'Content-Type';
+        more_set_headers        "Content-Type:image/jpg";
+        more_set_headers        "X-Content-Type:OverRidden-JPG";
+      
+      
+
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
