--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -277,16 +277,16 @@
 
       # Headers based on file extensions
 
-      location ~* ^.+.(svg|gif)$  
+      location ~* ^.+.(svg|gif)$ {
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/svg+xml";
         more_set_headers        "X-Content-Type:OverRidden-SVG";
-      
-      location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  
+      }
+      location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/jpg";
         more_set_headers        "X-Content-Type:OverRidden-JPG";
-      
+      }
       
 
 
