--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -275,8 +275,11 @@
     location ~* ^/s3/(.*) {
 
 
-      # Headers based on file extensions
+      # Variables from Current Location (Used later for proxying)
+      set $s3_bucket           'decalicious.s3.amazonaws.com';
+      set $url_full            '$1';
 
+      # Headers based on file extensions
       location ~* \.(svg|gif)$ {
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/svg+xml";
@@ -288,11 +291,6 @@
         more_set_headers        "X-Content-Type:OverRidden-JPG";
       }
       
-
-
-
-      set $s3_bucket           'decalicious.s3.amazonaws.com';
-      set $url_full            '$1';
 
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
