--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -216,7 +216,7 @@
    #       www.Decalicious.com/x (Static Content | NO CDN)
    # ----------------------------------------------------------
     #location /x/ {
-    location ~ /(x/|app/|favicon.ico/) {
+    location ~* /(x/|app/|favicon.ico/) {
 
 
       # HEADERS
@@ -272,12 +272,13 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* ^/s3/(.*) {
+    location ~* /s3 {
 
 
       # Variables from Current Location (Used later for proxying)
       set $s3_bucket           'decalicious.s3.amazonaws.com';
       set $url_full            '$1';
+
 
       # Headers based on file extensions
       location ~* \.(svg|gif)$ {
@@ -332,7 +333,7 @@
       proxy_buffering           off;
       resolver                  8.8.4.4 8.8.8.8 valid=300s;
       resolver_timeout          10s;
-      proxy_pass                http://$s3_bucket/$url_full;
+      proxy_pass                http://$s3_bucket;
       proxy_temp_path           /usr/share/nginx/temp;
 
 
