--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -277,20 +277,20 @@
 
       # Variables from Current Location (Used later for proxying)
       set $s3_bucket           'decalicious.s3.amazonaws.com';
-      set $url_full            '$1';
+#      set $url_full            '$1';
 
 
       # Headers based on file extensions
-      location ~* \.(svg|gif)$ {
-        more_clear_headers      'Content-Type';
-        more_set_headers        "Content-Type:image/svg+xml";
-        more_set_headers        "X-Content-Type:OverRidden-SVG";
-      }
-      location ~* \.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
-        more_clear_headers      'Content-Type';
-        more_set_headers        "Content-Type:image/jpg";
-        more_set_headers        "X-Content-Type:OverRidden-JPG";
-      }
+ #     location ~* \.(svg|gif)$ {
+ #       more_clear_headers      'Content-Type';
+ #       more_set_headers        "Content-Type:image/svg+xml";
+ #       more_set_headers        "X-Content-Type:OverRidden-SVG";
+ #     }
+ #     location ~* \.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
+ #       more_clear_headers      'Content-Type';
+ #       more_set_headers        "Content-Type:image/jpg";
+ #       more_set_headers        "X-Content-Type:OverRidden-JPG";
+ #     }
       
 
       # HEADERS
