--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -272,25 +272,24 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* /s3 {
+    location ~* /s3/(.*) {
 
 
       # Variables from Current Location (Used later for proxying)
       set $s3_bucket           'decalicious.s3.amazonaws.com';
-#      set $url_full            '$1';
-
+      set $url_full            '$1';
 
       # Headers based on file extensions
- #     location ~* \.(svg|gif)$ {
- #       more_clear_headers      'Content-Type';
- #       more_set_headers        "Content-Type:image/svg+xml";
- #       more_set_headers        "X-Content-Type:OverRidden-SVG";
- #     }
- #     location ~* \.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
- #       more_clear_headers      'Content-Type';
- #       more_set_headers        "Content-Type:image/jpg";
- #       more_set_headers        "X-Content-Type:OverRidden-JPG";
- #     }
+      location ~* \.(svg|gif)$ {
+        more_clear_headers      'Content-Type';
+        more_set_headers        "Content-Type:image/svg+xml";
+        more_set_headers        "X-Content-Type:OverRidden-SVG";
+      }
+      location ~* \.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
+        more_clear_headers      'Content-Type';
+        more_set_headers        "Content-Type:image/jpg";
+        more_set_headers        "X-Content-Type:OverRidden-JPG";
+      }
       
 
       # HEADERS
@@ -333,7 +332,7 @@
       proxy_buffering           off;
       resolver                  8.8.4.4 8.8.8.8 valid=300s;
       resolver_timeout          10s;
-      proxy_pass                http://$s3_bucket;
+      proxy_pass                http://$s3_bucket/$url_full;
       proxy_temp_path           /usr/share/nginx/temp;
 
 
