--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -216,7 +216,7 @@
    #       www.Decalicious.com/x (Static Content | NO CDN)
    # ----------------------------------------------------------
     #location /x/ {
-    location ~* /(x/|app/|favicon.ico/) {
+    location ~* /(x/|app/|favicon.ico) {
 
 
       # HEADERS
@@ -272,25 +272,27 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* /s3/(.*) {
+    location ~* ^/s3/(.*) {
 
-
-      # Variables from Current Location (Used later for proxying)
-      set $s3_bucket           'decalicious.s3.amazonaws.com';
-      set $url_full            '$1';
 
       # Headers based on file extensions
-      location ~* \.(svg|gif)$ {
+
+      location ~* \.(svg|xml)$ {
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/svg+xml";
         more_set_headers        "X-Content-Type:OverRidden-SVG";
       }
-      location ~* \.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
+      location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
         more_clear_headers      'Content-Type';
         more_set_headers        "Content-Type:image/jpg";
         more_set_headers        "X-Content-Type:OverRidden-JPG";
       }
       
+
+
+
+      set $s3_bucket           'decalicious.s3.amazonaws.com';
+      set $url_full            '$1';
 
       # HEADERS
       more_set_headers          "Server: DECALS-S3";
