--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -218,7 +218,6 @@
     #location /x/ {
     location ~* /(x/|app/|favicon.ico) {
 
-
       # HEADERS
       more_set_headers          "Server: DECALS-X";
       add_header                Cache-Control "no-transform,public,max-age=36720000";
@@ -241,7 +240,6 @@
       gzip_proxied              any;
       gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
  
-
       # PROXY SETTINGS
       proxy_http_version        1.1;
       proxy_redirect            off;
@@ -272,7 +270,7 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* ^/s3/(.*) {
+    location ~* ^/x/s3(.*) {
 
 
       # Headers based on file extensions
