Back to the wack

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -216,21 +216,21 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* ^/x/s3(.*) {
+    location ~* ^/s3/(.*) {
 
 
       # Headers based on file extensions
 
-      location ~* \.(svg|xml)$ {
-        more_clear_headers      'Content-Type';
-        more_set_headers        "Content-Type:image/svg+xml";
-        more_set_headers        "X-Content-Type:OverRidden-SVG";
-      }
-      location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
-        more_clear_headers      'Content-Type';
-        more_set_headers        "Content-Type:image/jpg";
-        more_set_headers        "X-Content-Type:OverRidden-JPG";
-      }
+    #  location ~* \.(svg|xml)$ {
+    #    more_clear_headers      'Content-Type';
+    #    more_set_headers        "Content-Type:image/svg+xml";
+    #    more_set_headers        "X-Content-Type:OverRidden-SVG";
+    #  }
+    #  location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|xml)$  {
+    #    more_clear_headers      'Content-Type';
+    #    more_set_headers        "Content-Type:image/jpg";
+    #    more_set_headers        "X-Content-Type:OverRidden-JPG";
+    #  }
       
 
 
