--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -231,8 +231,13 @@
     #    more_set_headers        "Content-Type:image/jpg";
     #    more_set_headers        "X-Content-Type:OverRidden-JPG";
     #  }
-      
 
+      
+      more_clear_headers        'Content-Type';
+      if ($request_uri ~* .*png.*) {  
+        more_set_headers        "Content-Type:image/png";
+        more_set_headers        "X-Content-Type:OverRidden";
+      }
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
