--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -218,6 +218,16 @@
    # ----------------------------------------------------------
     location ~* ^/s3/(.*) {
 
+        location ~* \.(css|js|png|gif)$ {
+            expires             max;
+            add_header          Pragma public;
+            add_header          Cache-Control "public";
+            more_set_headers    "X-Cheese: Stinky";
+        }
+
+
+
+
       set $s3_bucket           'decalicious.s3.amazonaws.com';
       set $url_full            '$1';
 
