Remove Blog Trailing Slash

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -146,10 +146,10 @@
     location ~* ^/blog(.*) {
 
       # Add Trailing Slash to Blog
-      if ($request_uri ~* "^/blog")
-      {
-        rewrite ^(.*[^/])$ $1/ permanent;
-      }
+      #if ($request_uri ~* "^/blog")
+      #{
+      #  rewrite ^(.*[^/])$ $1/ permanent;
+      #}
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
@@ -216,16 +216,7 @@
    # ----------------------------------------------------------
    #       www.Decalicious.com/s3 (Static Content Amazon S3)
    # ----------------------------------------------------------
-    location ~* ^/s3/(.*) {
-
-        location ~* \.(css|js|png|gif)$ {
-            expires             max;
-            add_header          Pragma public;
-            add_header          Cache-Control "public";
-            more_set_headers    "X-Cheese: Stinky";
-        }
-
-
+    location ~* ^/x/s3/(.*) {
 
 
       set $s3_bucket           'decalicious.s3.amazonaws.com';
