Remove Trailing Slash Blogger

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -145,11 +145,11 @@
    # ----------------------------------------------------------
     location ~* ^/blog(.*) {
 
-      # Add Trailing Slash to Blog
-      #if ($request_uri ~* "^/blog")
-      #{
-      #  rewrite ^(.*[^/])$ $1/ permanent;
-      #}
+      # Remove Trailing SLash
+      if ($request_uri ~* "^/blog/")
+      {
+         rewrite ^/(.*)/$ /$1 permanent;
+      }
 
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
