Longer Cache Blogger

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -162,9 +162,9 @@
 
       # HEADERS
       more_set_headers          "Server: DECALS-BL";
-      add_header                Cache-Control "public, max-age=9";
+      add_header                Cache-Control "public, max-age=3600";
       etag                      on;
-      expires                   60s;
+      expires                   1h;
       
       # Cache File Information
       open_file_cache           max=1000 inactive=500s;
@@ -199,7 +199,12 @@
 
 
       # PROXY CACHING
-      proxy_cache               off;
+      proxy_cache               STATIC;
+      proxy_cache_valid         200 302 1d;
+      proxy_cache_valid         404     1m;
+      proxy_cache_use_stale     error timeout invalid_header updating
+      http_500 http_502 http_503 http_504;
+
 
       #HTTP ERRORS LOCALLY 
       proxy_intercept_errors on; 
