--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -152,6 +152,11 @@
         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
       }
 
+      location ~* ^/blog/robots.txt {
+        rewrite http://www.decalicious.com/robots.txt permanent;
+      }
+
+
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
 
