--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -153,7 +153,7 @@
       }
 
       location ~* ^/blog/robots.txt {
-        rewrite http://www.decalicious.com/robots.txt permanent;
+        deny all;
       }
 
 
