--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -72,6 +72,115 @@
 
 
 
+   # ----------------------------------------------------------
+   #       X.DECALICIOUS.com (STATIC ITEMS)
+   # ----------------------------------------------------------
+   server {
+
+    # SERVER SPECIFIC SETTINGS
+    listen                80;
+    server_name           x.decalicious.com;
+    root                  /usr/share/nginx/sites/decalicious-down/;
+    keepalive_timeout     5s;
+    allow                 all;
+    server_tokens         off; 
+    more_clear_headers    'Cache-Control';
+
+   # ----------------------------------------------------------
+   #       X.Decalicious.com/x (Static Content | NO CDN)
+   # ----------------------------------------------------------
+    #location /x/ {
+    location ~* /(x/|app/|favicon.ico) {
+
+      # HEADERS
+      more_set_headers          "Server: DECALS-CF";
+      add_header                Cache-Control "no-transform,public,max-age=36720000";
+      etag                      on;
+      expires                   425d;
+      
+      # Cache File Information
+      open_file_cache           max=1000 inactive=500s;
+      open_file_cache_valid     600s;
+      open_file_cache_errors    on;
+
+      # Gzip
+      gzip                      on;
+      gzip_vary                 on;
+      gzip_http_version         1.0;
+      gzip_disable              "MSIE [1-6].(?!.*SV1)";
+      gzip_min_length           200;
+      gzip_buffers              64 8k;
+      gzip_comp_level           3;
+      gzip_proxied              any;
+      #gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+      gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
+
+ 
+      # PROXY SETTINGS
+      proxy_http_version        1.1;
+      proxy_redirect            off;
+      proxy_set_header          Host              $http_host;
+      proxy_set_header          X-Real-IP         $remote_addr;
+      proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header          X-Forwarded-Proto $scheme;
+      proxy_pass                http://iis-servers-decalicious;
+      proxy_temp_path           /usr/share/nginx/temp;
+      #proxy_connect_timeout    5;
+      #proxy_read_timeout       240;
+
+      # PROXY CACHING
+      proxy_cache               STATIC;
+      proxy_cache_valid         200 302 1d;
+      proxy_cache_valid         404     1m;
+      proxy_cache_use_stale     error timeout invalid_header updating
+      http_500 http_502 http_503 http_504;
+
+      #HTTP ERRORS LOCALLY 
+      proxy_intercept_errors on; 
+      error_page 500 502 503 504 =503 /maintenance.html;
+      #error_page 404 =404 /404.html;      
+      break;
+    }
+
+
+    # ERROR PAGE - DOWN FOR MAINTENANCE
+    location  ^~ /maintenance.html {
+      root   /usr/share/nginx/sites/decalicious-down/;
+      index  maintenance.html index.html index.htm;
+      allow all;
+    }
+
+
+    # EROR PAGE - LOCAL 404 PAGE
+    location  ^~ /404.html {
+      root   /usr/share/nginx/sites/decalicious-down/;
+      index  404.html index.html index.htm;
+      allow all;
+    }
+
+    # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
+    location /xs {
+      root   /usr/share/nginx/sites/decalicious-down/;
+      allow  all;     
+   }
+
+   # ERROR PAGES (LOCAL)
+   error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
+   error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
+
+
+   # NO LOGGING
+   access_log          /dev/null;
+   error_log           /dev/null;
+   # DEBUG LOGGING
+   #error_log           /var/log/nginx/decalicious.com.error.log ;
+   #access_log          /var/log/nginx/decalicious.com.log ;
+
+  }
+
+
+
+
 
    # ----------------------------------------------------------
    #       DECALICIOUS.com (with any subdomain)
@@ -145,8 +254,6 @@
    # ----------------------------------------------------------
     location ~* ^/blog(.*) {
 
-
-
       # Make sure blog is only available under www domain
       if ( $host != 'www.decalicious.com' ) {
         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
@@ -155,7 +262,6 @@
       location ~* ^/blog/robots.txt {
         deny all;
       }
-
 
       # Rewrite outbound text to new url
       subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
