Additional header for testing

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -85,6 +85,7 @@
     allow                 all;
     server_tokens         off; 
     more_clear_headers    'Cache-Control';
+    more_set_headers      "X-TESTING: DECALS-CF";
 
    # ----------------------------------------------------------
    #       X.Decalicious.com/x (Static Content | NO CDN)
