--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -87,6 +87,11 @@
     more_clear_headers    'Cache-Control';
     more_set_headers      "X-TESTING: DECALS-CF";
 
+
+    location / {
+      deny all;
+    }
+
    # ----------------------------------------------------------
    #       X.Decalicious.com/x (Static Content | NO CDN)
    # ----------------------------------------------------------
